@@ -7,5 +7,3 @@
 * add delay on hide
 * add stick on hover of tooltip (with track:false)
 * offer hoverIntent support
-* add image map support (see http://test.learningjquery.com/clue/chic-test.html)
-* remove $.Tooltip/$.fn.Tooltip
